--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,11 +40,11 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.2em 0.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #3cc8b8;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -67,5 +67,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-  
 }
