feat: :sparkles: button back nav

--- a/client/src/styles/components/_navbar.scss
+++ b/client/src/styles/components/_navbar.scss
@@ -7,10 +7,12 @@
   .navbar_container_info {
     display: flex;
 
-    a {
+    button {
       padding: 5px;
+      background: $standard-color-blue;
       color: $white;
       text-decoration: none;
+      
     }
   }
 }
