--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -6,6 +6,7 @@ $dark: #001e24;
 //TODO color palette ( RGB )
 $standard-color-black:rgba(0,0,0);
 $standard-color-blue:rgba(20,33,66,1);
+$standard-color-blue-l:rgb(28, 39, 67);
 $standard-color-blue-light:rgba(137,171,202,0.4);
 $standard-color-blue-green:rgba(23,195,178,1);
 $standard-color-blue-secundary:rgba(48,79,104,1);
