--- a/client/src/styles/components/_home.scss
+++ b/client/src/styles/components/_home.scss
@@ -20,3 +20,59 @@
     width: 50%;
     
 }
+
+
+.home_imagepart_1{
+    display: flex;
+    justify-content: end;
+    position: relative;
+    margin-right:96px;
+
+}
+
+
+// .home_text_1{
+//     font-size: 72px;
+//     position:absolute;
+//     bottom: 0;
+//     left: 0;
+
+// }
+// .home_text_2{
+//     font-size: 48px;
+//     position:absolute;
+//     bottom: 0;
+//     left: 0;
+// }
+.home_text_1{
+    font-size: 72px;
+    position:absolute;
+    bottom: 50%;
+    left: 50%;
+    transform: translate(-85%, 20%);
+    padding-top: 50px; /* add desired value here */
+}
+.home_text_2{
+    font-size: 48px;
+    position:absolute;
+    bottom: 50%;
+    left: 50%;
+    transform: translate(-70%, 40%);
+    padding-top: 50px; /* add desired value here */
+}
+
+.home_button_li{
+    display:flex;
+    background-color: $standard-color-blue;
+    color: $white;
+    font-size: 16px;
+    height: 36px;
+    padding-bottom:25px;
+    padding: 16px;
+    align-items: center;
+    justify-content: center;
+    position:absolute;
+    border-radius:5px;
+    transform: translate(-600%, 650%);
+  
+}
