--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -5,6 +5,7 @@
 @import './components/navbar';
 @import './components/footer';
 @import './components/home';
+@import './components/carrousel';
 
 
 //! Detail
