--- a/client/src/styles/components/_navbar.scss
+++ b/client/src/styles/components/_navbar.scss
@@ -4,6 +4,7 @@
   background: linear-gradient(to right,rgba(20,33,66,1), rgba(0,0,0))!important;
   padding: 10px;
   border-radius: 50px;
+  width: auto;
 
   .navbar_container_info {
     display: flex;
