--- a/client/src/styles/components/Detail/_detail.scss
+++ b/client/src/styles/components/Detail/_detail.scss
@@ -1,7 +1,6 @@
 .detail-contain {
-    margin-top: $standard-space-between-elements;
-  width: 100%;
-  height: auto;
+  font-size: 30px;
+  margin-top: $standard-space-between-elements;
   background-color: $standard-color-white-background;
   display: flex;
   flex-direction: column;
@@ -10,66 +9,110 @@
   gap: $standard-space-between-elements;
   .info-pincipal-detail {
     height: $standard-heigth-full-hd * 0.7;
-    width: $standard-with-full-hd;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: $standard-space-between-elements;
 
     .land-images {
-      height: 100%;
-      width: 15%;
+      height: 90%;
+      width: 10%;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      background-color: $standard-color-blue-light;
+      justify-content: space-evenly;
       border-radius: $standard-border-radius;
       gap: $standard-space-between-elements;
+      margin-top: -76px;
       .secondary-images {
-          height: 22%;
-          width: 90%;
-          background-color: $standard-color-blue-secundary;
-          border-radius: $standard-border-radius;
+        height: 17%;
+        width: 80%;
+        cursor: pointer;
+        border-radius: $standard-border-radius;
+        background: #e0e0e0;
+        box-shadow: 14px 14px 17px #8b8b8b, -14px -14px 17px #ffffff;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border: 1px solid $standard-color-blue;
+        }
+
+        img:hover {
+          border-color: $standard-color-blue-secundary;
+        }
       }
     }
 
     .imagen-principal-detail {
       height: 100%;
       width: 50%;
-      background-color: $standard-color-blue-light;
       display: flex;
       justify-content: center;
       align-items: center;
-      border-radius: $standard-border-radius;
       .principal-image {
         height: 95%;
         width: 95%;
-        background-color: $standard-color-blue-secundary;
         border-radius: $standard-border-radius;
+        background: #e0e0e0;
+        box-shadow: 14px 14px 17px #8b8b8b, -14px -14px 17px #ffffff;
+
+        img {
+          width: 100%;
+          height: 100%;
+          border-radius: $standard-border-radius;
+        }
       }
     }
 
     .principal-details {
       height: 100%;
-      width: 30%; 
+      width: 30%;
       border-radius: $standard-border-radius;
       display: flex;
       flex-direction: column;
       justify-content: start;
       align-items: center;
       gap: $standard-space-between-elements;
-      .character-details{
+      .character-details {
+        display: flex;
+        flex-direction: column;
         height: 75%;
         width: 100%;
         background-color: $standard-color-blue-light;
         border-radius: $standard-border-radius;
+        .product-detail {
+          padding: 15px;
+          margin: 10px;
+        }
+        .product-brand {
+          padding: 10px;
+          margin: 10px;
+        }
+
+        .product-description {
+          padding: 15px;
+          margin: 10px;
+        }
       }
-      .transaction-details{
+      .transaction-details {
         height: 23%;
         width: 100%;
         background-color: $standard-color-blue-light;
         border-radius: $standard-border-radius;
+        .price_rating {
+          display: flex;
+          justify-content: center;
+        }
+        .transaction-price {
+          padding: 15px;
+          margin: 10px;
+        }
+        .product-rating {
+          padding: 10px;
+          margin: 10px;
+        }
       }
     }
   }
@@ -87,26 +130,25 @@
       background-color: $standard-color-blue-light;
       border-radius: $standard-border-radius;
     }
-    
-}
-.comments-section {
+  }
+  .comments-section {
     height: 500px;
     width: $standard-with-full-hd;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: $standard-space-between-elements;
-    .comments-box{
-        width: 70%;
-        height: 100%;
-        background-color: $standard-color-blue-light;
-        border-radius: $standard-border-radius;
+    .comments-box {
+      width: 70%;
+      height: 100%;
+      background-color: $standard-color-blue-light;
+      border-radius: $standard-border-radius;
     }
-    .other-box{
-        width: 26%;
-        height: 100%;
-        background-color: $standard-color-blue-light;
-        border-radius: $standard-border-radius;
+    .other-box {
+      width: 26%;
+      height: 100%;
+      background-color: $standard-color-blue-light;
+      border-radius: $standard-border-radius;
     }
   }
 }
