--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -6,6 +6,7 @@
 @import './components/footer';
 @import './components/home';
 @import './components/carrousel';
+@import './components/dashboard_user';
 
 
 //! Detail
