--- a/client/src/styles/components/_dashboard_user.scss
+++ b/client/src/styles/components/_dashboard_user.scss
@@ -20,6 +20,16 @@
     border-radius: $standard-border-radius;
     cursor: pointer;
 
+    @media (max-width:1100px) {
+        width: 80%;
+    }
+
+    @media (max-width:850px) {
+        width: 95%;
+    }
+
+    
+
     .dash_infouser_title {
         display: flex;
         justify-content: center;
@@ -54,6 +64,19 @@
     margin-top: 20px;
     box-shadow: 1px 1px 1px 1px rgba(161, 159, 159, 0.3);
 
+    @media (max-width:1100px) {
+        width: 80%;
+    }
+
+    @media (max-width:850px) {
+        width: 95%;
+    }
+
+    @media (max-width:700px) {
+        flex-direction: column;
+        height: 220px;
+    }
+
     .dash_profile_ImgSide {
         display: flex;
         position: absolute;
@@ -61,6 +84,11 @@
         top: 10px;
         justify-content: center;
         width: 20%;
+
+        @media (max-width:700px) {
+            position: relative;
+            top: 0;
+        }
         
         img {
             border-radius: 100%;
@@ -93,6 +121,16 @@
     box-shadow: 1px 1px 1px 1px rgba(161, 159, 159, 0.3);
     padding-bottom: 10px;
     margin-bottom: 20px;
+
+    @media (max-width:1100px) {
+        width: 80%;
+    }
+
+    @media (max-width:850px) {
+        width: 95%;
+    }
+
+
 
     .dash_purchaseTitleContainer {
 
