style(Home): :art: modify Styles Home and fix bugs

--- a/client/src/styles/components/_home.scss
+++ b/client/src/styles/components/_home.scss
@@ -4,21 +4,9 @@
     justify-content: center;
 }
 
-.home_topLanding {
-    display: flex;
-    justify-content: space-between;
-}
 
-.home_container_logo {
-    width: 50%;
-    .logo {
-        width: 150px;
-    }
-}
 
-.home_container_navbar {
-    width: auto;
-}
+
 
 
 .home_imagepart_1{
@@ -30,31 +18,42 @@
 }
 
 .home_text_1{
-    font-size: 72px;
+    font-size: 130px;
+    font-family: 'Josefin Sans', sans-serif;
     margin: 0;
+    position: relative;
+    left: 25px;
 }
 .home_text_2{
-    font-size: 48px;
+    font-size: 130px;
+    font-family: 'Exo 2', sans-serif;
     margin: 0;
+    position: relative;
+    bottom: 65px;
+    left: 50px;
 }
 
 .home_button_li{
     display:flex;
     background-color: $standard-color-blue;
-    border: none;
-    border-radius: 50px;
     color: $white;
-    font-size: 16px;
-    height: 36px;
-    padding-bottom:25px;
-    padding: 16px;
-    padding-left: 60px;
-    padding-right: 60px;
+    border: 1px solid $standard-color-blue;
+    border-radius: 50px;
+    font-size: 35px;
+    font-family: 'Josefin Sans', sans-serif;
+    padding: 5px 70px;
     align-items: center;
     justify-content: center; 
     position: relative;
     right: 50px;
+    bottom: 50px;
     cursor:pointer;
+
+    &:hover {
+        background-color: $white;
+        border: 1px solid $standard-color-blue;
+        color: $standard-color-blue;
+    }
 }
 
 .home_container_carrouselSide {
