--- a/client/src/styles/components/_navbar.scss
+++ b/client/src/styles/components/_navbar.scss
@@ -1,31 +1,61 @@
+.Nav_topLanding {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-family: 'Roboto', sans-serif;
+
+  .Nav_container_logo {
+    width: 50%;
+    
+    .logo {
+        width: 300px;
+        margin-left: 15px;
+        margin-top: 5px;
+    }
+  }
+
+  .Nav_container_navbar {
+    width: auto;
+  }
+
+}
+
 .navbar_container {
   display: flex;
-  justify-content: flex-end;
-  background: linear-gradient(to right,rgba(20,33,66,1), rgba(0,0,0))!important;
-  padding: 10px;
+  justify-content: center;
+  //background: inear-gradient(to right,rgba(20,33,66,1), rgba(0,0,0))!important;
+  background-color: $standard-color-blue;
+  align-items: center;
+  padding: 9px 20px;
   border-radius: 50px;
   width: auto;
 
-  .navbar_container_info {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    
-    
 
-    p {
-      
-      color: $white;
-      text-decoration: none;
-      border: none;
-      padding:5px 0px;
-      padding-left: 10px;
-      margin:0;
-    }
-    .logo{
-      margin-right: 8px;
-    }
+  .nav_middle_button {
+    border-right: 1px solid $white;
+    
   }
+
+  .link-style {
+    margin: 0;
+  }
+    
+    p {
+      margin: 0;
+      padding-left: 20px;
+      padding-right: 20px;
+      
+      &:hover {
+        color: $standard-color-blue-green;
+      }
+    }
+    .logo {
+      margin-left: 5px;
+      width: 40px;
+      height: 35px;
+      cursor: pointer;
+    }
+  
 }
 
 .navbar_container a {
@@ -37,13 +67,11 @@
 
 .navbar_container img {
   width: 50px;
-  margin-right: 20px;
+  margin-right: 20px;
 }
 
 
-.link-style {
-  border-left: 1px solid white;
-}
+
 
 .profile-div{
   display: flex;
