style(Home): :art: Demo Version News Home Style

--- a/client/src/styles/components/_newsHome.scss
+++ b/client/src/styles/components/_newsHome.scss
@@ -8,9 +8,12 @@
     width: 200px;
     height: 150px;
     background-color:$standard-color-blue;
+    border-radius: $standard-border-radius;
     margin: 10px;
 
     img{
-        
+        width: 100%;
+        height: 100%;
+        border-radius: $standard-border-radius;
     }
 }
