--- a/client/src/styles/components/_home.scss
+++ b/client/src/styles/components/_home.scss
@@ -107,32 +107,50 @@
 
 .home_news_container{
     display:flex;
-    
-}
+    margin-top: 20px;
 
-.home_news_side{
-   
-    width: 70%;
-    display: flex;
-    flex-direction: column;
-}
+    .home_news_side{
+        width: 50%;
+        display: flex;
+        flex-direction: column;
 
-.home_news_image_side{
-    
-    width: 30%;
-    
+        .news_title{
+            display: flex;
+            font-family: 'Josefin Sans', sans-serif;
+            background: linear-gradient(90deg, rgb(177, 174, 174), white);
 
-    img{
-        width: 300px;
-        height: 350px;
+            h1 {
+                font-size: 50px;
+                margin-left: 25px;
+            }
+        }
+        .news_back{
+            display: flex;
+            justify-content: flex-end;
+            margin-right: 15px;
+            font-family: 'Josefin Sans', sans-serif;
+            font-size: 30px;
+            cursor: pointer;
+            
+            h3 {
+                font-weight: 500;
+                &:hover {
+                    color: $standard-color-blue;
+                    font-weight: 1000;
+                }
+            }
+        }
+    }
+
+    .home_news_image_side{
+        width: 50%;
+        display: flex;
+        justify-content: flex-end;
+        img{
+            width: 80%;
+        }
     }
 }
 
-.news_title{
-    margin-left:25px;
-}
-.news_back{
-    display: flex;
-    justify-content: flex-end;
-    margin-right: 15px;
-}
+
+
