--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -1,22 +1,60 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 $main: #7000b1;
 $secondary: #01bebe;
 $white: #f5f5f5;
 $dark: #001e24;
 
+//TODO fonts
+
+$standard-font-Barlow: "Barlow", sans-serif;
+
 //TODO color palette ( RGB )
-$standard-color-black:rgba(0,0,0);
-$standard-color-blue:rgba(20,33,66,1);
-$standard-color-blue-light:rgba(137,171,202,0.4);
-$standard-color-blue-green:rgba(23,195,178,1);
-$standard-color-blue-secundary:rgba(48,79,104,1);
-$standard-color-gray:rgba(229,229,229,1);
-$standard-color-red:rgba(254,109,115,1);
-$standard-color-white:rgba(255,255,255,1);
-$standard-color-white-background:rgba(254,249,239,1);
-$standard-color-yellow:rgba(252,163,17,1);
+$standard-color-black: rgba(0, 0, 0);
+$standard-color-blue: rgba(20, 33, 66, 1);
+$standard-color-blue-solid-grad: rgba(68, 195, 231, 0.13);
+$standard-color-blue-light: rgba(137, 171, 202, 0.4);
+$standard-color-blue-green: rgba(23, 195, 178, 1);
+$standard-color-blue-secundary: rgba(48, 79, 104, 1);
+$standard-color-gray: rgba(229, 229, 229, 1);
+$standard-color-red: rgba(254, 109, 115, 1);
+$standard-color-transparent: rgba(0, 0, 0, 0);
+$standard-color-white: rgba(255, 255, 255, 1);
+$standard-color-white-background: rgba(254, 249, 239, 1);
+$standard-color-yellow: rgba(252, 163, 17, 1);
 
 //TODO dimensions (px)
-$standard-with-full-hd:1920px;
-$standard-heigth-full-hd:1080px;
-$standard-border-radius:10px;
-$standard-space-between-elements:19px;
+$standard-with-full-hd: 1920px;
+$standard-heigth-full-hd: 1080px;
+$standard-border-radius: 10px;
+$standard-space-between-elements: 19px;
+
+//===============================
+
+// $main: #7000b1;
+// $secondary: #01bebe;
+// $white: #f5f5f5;
+// $dark: #001e24;
+
+// //TODO color palette ( RGB )
+// $standard-color-black: rgba(0, 0, 0);
+// $standard-color-blue: rgba(20, 33, 66, 1);
+// $standard-color-blue-light: rgba(137, 171, 202, 0.4);
+// $standard-color-blue-green: rgba(23, 195, 178, 1);
+// $standard-color-blue-secundary: rgba(48, 79, 104, 1);
+// $standard-color-gray: rgba(229, 229, 229, 1);
+// $standard-color-red: rgba(254, 109, 115, 1);
+// $standard-color-white: rgba(255, 255, 255, 1);
+// $standard-color-white-background: rgba(254, 249, 239, 1);
+// $standard-color-yellow: rgba(252, 163, 17, 1);
+// $standard-color-transparent: rgba(0, 0, 0, 0);
+
+// //TODO dimensions (px)
+// $standard-with-full-hd: 1920px;
+// $standard-heigth-full-hd: 1080px;
+// $standard-border-radius: 10px;
+// $standard-space-between-elements: 19px;
