--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -1,12 +1,25 @@
 // UI Settings
-@import './base/settings';
+@import "./base/settings";
 
 // Components
-@import './components/navbar';
-@import './components/footer';
-
+@import "./navbar";
+@import "./components/footer";
 
 //! Detail
-@import './components/Detail/detail';
-
-// screens
+@import "./components/Detail/detail";
+//! FilterPanel
+@import "./components/FilterPanel/filterPanel";
+//! FilterBy
+@import "./components/FilterBy/filterBy";
+//! FilterList
+@import "./components/FilterList/filterList";
+//! ItemFilter
+@import "./components/ItemFilter/itemFilter";
+//! RenderCard
+@import "./components/RenderCard/renderCard";
+//! Pagination
+@import "./components/pagination/pagination"; // screens
+//! BreadCrumb
+@import "./components//breadCrumb"; // screens
+//! Shop
+@import "./components/Shop/shop";
