shoppingCart view added

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -6,7 +6,7 @@
 @import './components/footer';
 @import './components/home';
 @import './components/carrousel';
-
+@import './components/ShoppingCart/shoppingCart';
 
 //! Detail
 @import './components/Detail/detail';
