--- a/client/src/styles/components/_navbar.scss
+++ b/client/src/styles/components/_navbar.scss
@@ -63,6 +63,7 @@
       position: absolute;
       right: 40px;
       bottom: -35px;
+      align-items: center;
 
     }
 
@@ -78,14 +79,17 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center;
 
       .nav_modalWindow_Link {
         margin: 0;
+        align-items: center;
       }
 
       p {
         margin: 5px;
         padding: 0;
+        align-items: center;
       }
     }
 }
@@ -95,6 +99,7 @@
   text-decoration: none;
   margin-right: 20px;
   font-size: 1.2em;
+  
 }
 
 .navbar_container img {
