fix(Home): :bug: fix Background carrousel bug

--- a/client/src/styles/components/_home.scss
+++ b/client/src/styles/components/_home.scss
@@ -59,7 +59,7 @@
 .home_container_carrouselSide {
     display: flex;
     background-image: url("https://cdn.discordapp.com/attachments/1062718230432596059/1065996148034256936/img_fondo_oscura.png");
-    background-size: contain;
+    background-size: cover;
     justify-content: space-between;
     align-items: center;
     overflow: hidden;
