style(Home): :bug: fix margin body

--- a/client/src/styles/components/_home.scss
+++ b/client/src/styles/components/_home.scss
@@ -1,13 +1,12 @@
+body {
+    margin: 0;
+}
+
 .home_wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
-
-
-
-
-
 
 .home_imagepart_1{
     display: flex;
