style(news): :art: News Component styles

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -8,7 +8,7 @@
 @import './components/carrousel';
 @import './components/dashboard_user';
 @import './components/newsHome';
-
+@import './components/news/news';
 @import './components/footer';
 
 //! Detail
