--- a/client/src/styles/components/_dashboard_user.scss
+++ b/client/src/styles/components/_dashboard_user.scss
@@ -4,6 +4,7 @@
     align-items: center;
     background-color: $white;
     font-family: 'Courier New', Courier, monospace;
+    font-family: 'Roboto', sans-serif;
     margin-top: 10px;
 }
 
@@ -115,6 +116,7 @@
     flex-direction: column;
     align-items: center;
     width: 60%;
+    min-height: 150px;
     background-color: white;
     margin-top: 20px;
     border-radius: $standard-border-radius;
