feat(Nav): :art: Responsive Navbar

--- a/client/src/styles/components/_dashboard_user.scss
+++ b/client/src/styles/components/_dashboard_user.scss
@@ -3,9 +3,9 @@
     flex-direction: column;
     align-items: center;
     background-color: $white;
-    font-family: 'Courier New', Courier, monospace;
     font-family: 'Roboto', sans-serif;
-    margin-top: 10px;
+    //font-family: 'Courier New', Courier, monospace;
+    //margin-top: 10px;
 }
 
 .dash_infouser_container {
