feat(Cards and Styles): :sparkles: Card and Styles

--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -13,6 +13,18 @@ $dark: #001e24;
 
 $standard-font-Barlow: 'Barlow', sans-serif;
 
+$standard-font-Josefin-Sans: 'Josefin Sans', sans-serif;
+$standard-font-Poiret-One: 'Poiret One', cursive; // principal title 1
+$standard-font-Quicksand: 'Quicksand', sans-serif; // principal title 2
+$standard-font-Satisfy: 'Satisfy', cursive;
+
+$standard-font-Hanken-Grotesk: 'Hanken Grotesk', sans-serif;
+$standard-font-IBM-Plex-Sans-Arabic: 'IBM Plex Sans Arabic', sans-serif;
+$standard-font-Lexend-Deca-sans-serif: 'Lexend Deca', sans-serif;
+$standard-font-Outfit-sans-serif :'Outfit', sans-serif;
+$standard-font-Urbanis-sans-serif:'Urbanist', sans-serif;
+
+
 //TODO color palette ( RGB )
 $standard-color-black: rgba(0, 0, 0);
 $standard-color-blue: rgba(20, 33, 66, 1);
@@ -32,6 +44,11 @@ $standard-with-full-hd: 1920px;
 $standard-heigth-full-hd: 1080px;
 $standard-border-radius: 10px;
 $standard-space-between-elements: 19px;
+
+
+$standard-basic-heith-home: 1080px;
+
+
 
 //===============================
 
