--- a/client/src/styles/components/_navbar.scss
+++ b/client/src/styles/components/_navbar.scss
@@ -1,98 +1,101 @@
 .Nav_topLanding {
+  height: 70px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-family: 'Roboto', sans-serif;
+  font-family: $standard-font-Poiret-One;
+  margin-right: 30px;
+  margin-left: 30px;
+  margin-top: 10px;
+  //background-color: aqua;
 
   .Nav_container_logo {
-    width: 50%;
-
+    width: 100%;
+    top: 20px;
     .logo {
-        width: 300px;
-        margin-left: 15px;
-        margin-top: 5px;
+        width: 200px;
     }
   }
 
   .Nav_container_navbar {
     width: auto;
-  }
-}
-
-.navbar_container {
-  display: flex;
-  justify-content: center;
-  position: relative;
-  //background: inear-gradient(to right,rgba(20,33,66,1), rgba(0,0,0))!important;
-  background-color: $standard-color-blue;
-  align-items: center;
-  padding: 9px 20px;
-  border-radius: 50px;
-  width: auto;
-
-
-  .nav_middle_button {
-    border-right: 1px solid $white;
-    
-  }
-
-  .link-style {
-    margin: 0;
-  }
-    
-    p {
-      margin: 0;
-      padding-left: 20px;
-      padding-right: 20px;
-      
-      &:hover {
-        color: $standard-color-blue-green;
-      }
-    }
-    .logo {
-      margin-left: 5px;
-      width: 40px;
-      height: 35px;
-      cursor: pointer;
-    }
-
-    .nav_modalTriangle {
-      border-left: 25px solid transparent;
-      border-right: 25px solid transparent;
-      border-bottom: 30px solid $standard-color-blue;
-      position: absolute;
-      right: 40px;
-      bottom: -35px;
-      align-items: center;
-
-    }
-
-    .nav_modalProfilewindows {
-      position: absolute;
-      right:  30px;
-      top: 80px;
-      width: 140px;
-      height: 70px;
-      z-index: 2;
-      background-color: $standard-color-blue;
-      border-radius: 10px;
+    //background-color: aqua;
+    .navbar_container {
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
-
-      .nav_modalWindow_Link {
+      position: relative;
+      background-color: $standard-color-blue;
+      //background: inear-gradient(to right,rgba(20,33,66,1), rgba(0,0,0))!important;
+      align-items: center;
+      padding: 9px 20px;
+      border-radius: 50px;
+      width: auto;
+      .nav_middle_button {
+        border-right: 1px solid $standard-color-blue-green;  
+      }
+    
+      .link-style {
         margin: 0;
-        align-items: center;
       }
-
-      p {
-        margin: 5px;
-        padding: 0;
-        align-items: center;
-      }
+        
+        p {
+          margin: 0;
+          padding-left: 20px;
+          padding-right: 20px;
+          
+          &:hover {
+            color: $standard-color-blue-green;
+          }
+        }
+        .logo {
+          margin-left: 5px;
+          width: 40px;
+          height: 35px;
+          cursor: pointer;
+        }
+    
+        .nav_modalTriangle {
+          border-left: 25px solid transparent;
+          border-right: 25px solid transparent;
+          border-bottom: 30px solid $standard-color-blue;
+          position: absolute;
+          right: 40px;
+          bottom: -35px;
+          align-items: center;
+    
+        }
+    
+        .nav_modalProfilewindows {
+          position: absolute;
+          right:  30px;
+          top: 80px;
+          width: 140px;
+          height: 70px;
+          z-index: 2;
+          background-color: $standard-color-blue;
+          border-radius: 10px;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+    
+          .nav_modalWindow_Link {
+            margin: 0;
+            align-items: center;
+          }
+    
+          p {
+            margin: 5px;
+            padding: 0;
+            align-items: center;
+          }
+        }
     }
+
+  }
 }
+
+
 
 .navbar_container a {
   color: white;
