--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -23,6 +23,8 @@
 @import './components/ItemFilter/itemFilter';
 //! RenderCard
 @import './components/RenderCard/renderCard';
+//! RenderCard
+@import './components/Card2/card2';
 //! Pagination
 @import './components/pagination/pagination'; // screens
 //! BreadCrumb
