--- a/client/src/styles/components/_home.scss
+++ b/client/src/styles/components/_home.scss
@@ -6,174 +6,226 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-}
 
-.home_imagepart_1{
-    display: flex;
-    justify-content: end;
-    position: relative;
-    margin-right:96px;
 
-}
+    .home_imagepart_1 {
+        display: flex;
+        justify-content: end;
+        position: relative;
+        margin-right: 96px;
 
-.home_text_1{
-    font-size: 130px;
-    font-family: 'Josefin Sans', sans-serif;
-    margin: 0;
-    position: relative;
-    left: 25px;
-}
-.home_text_2{
-    font-size: 130px;
-    font-family: 'Exo 2', sans-serif;
-    margin: 0;
-    position: relative;
-    bottom: 65px;
-    left: 50px;
-}
+    }
 
-.home_button_li{
-    display:flex;
-    background-color: $standard-color-blue;
-    color: $white;
-    border: 1px solid $standard-color-blue;
-    border-radius: 50px;
-    font-size: 35px;
-    font-family: 'Josefin Sans', sans-serif;
-    padding: 5px 70px;
-    align-items: center;
-    justify-content: center; 
-    position: relative;
-    right: 50px;
-    bottom: 50px;
-    cursor:pointer;
+    .home_all_imageSide {
+        //background-color: aqua;
+        height: $standard-basic-heith-home;
 
-    &:hover {
-        background-color: $white;
-        border: 1px solid $standard-color-blue;
-        color: $standard-color-blue;
+        .home_image_left {
+            //  background-color: antiquewhite;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            width: 50%;
+            align-items: flex-end;
+            z-index: 2;
+
+            //height: 807.502px;
+            //width: 807.502px;
+            .home_text_1 {
+                font-size: 280px;
+                font-family: $standard-font-Poiret-One;
+                margin: 0;
+                position: relative;
+                left: 90px;
+            }
+
+            .home_text_2 {
+                font-size: 130px;
+                font-family: $standard-font-Satisfy;
+                margin: 0;
+                position: relative;
+                bottom: 50px;
+                left: 100px;
+                transform: rotate(-0deg);
+            }
+
+            .home_button_li {
+                width: 457px;
+                height: 93px;
+                display: flex;
+                background-color: $standard-color-blue;
+                color: $white;
+                border: 1px solid $standard-color-blue;
+                border-radius: 50px;
+                font-size: 53px;
+                font-family: $standard-font-Poiret-One;
+                padding: 5px 70px;
+                align-items: center;
+                justify-content: center;
+                position: relative;
+                right: 50px;
+                bottom: 50px;
+                cursor: pointer;
+                transition: background-color 0.6s, border 0.6s;
+
+                &:hover {
+                    background-color: $standard-color-white-background;
+                    border: 1px solid $standard-color-blue;
+                    color: $standard-color-blue;
+                }
+            }
+        }
+
+        .home_image_rigth {
+            display: flex;
+            justify-content: flex-start;
+            width: 50%;
+            align-items: center;
+
+            .home_image1 {
+                position: relative;
+                right: 100px;
+
+                height: 807.502px;
+                width: 807.502px;
+            }
+        }
+
+    }
+
+    .home_container_carrouselSide {
+        background-color: blueviolet;
+        height: 1080px;
+        display: flex;
+        
+        background-size: cover;
+        justify-content: space-between;
+        align-items: center;
+        overflow: hidden;
+        transform:
+            rotateY(calc(var(--offset) * 50deg)) scaleY(calc(1 + var(--abs-offset) * -0.4)) translateZ(calc(var(--abs-offset) * -30rem)) translateX(calc(var(--direction) * -5rem));
+        filter: blur(calc(var(--abs-offset) * 1rem));
+        transition: all 0.3s ease-out;
+        background-repeat: no-repeat;
+        position: relative;
+
+        .home_carrousel_logo {
+            position: absolute;
+            bottom: 40px;
+            right: 20px;
+
+            width: 100px;
+
+            img {
+                width: 100%;
+            }
+        }
+        .home_container_imagediv {
+            display: flex;
+            align-items: center;
+            height: 70%;
+            width: 30%;
+            //background-color: antiquewhite;
+            .home_carrouselIMG {
+                height: 80%;
+                margin-top: 45px;
+                margin-bottom: 45px;
+            }
+        }
+        .home_carrousel_ContainerDiv {
+            display: flex;
+            //background-color: aliceblue;
+            flex-direction: center;
+            width: 55%;
+        }
+    }
+    .home_news_container {
+        display: flex;
+        margin-top: 0px;
+        //background-color: aqua;
+    
+        .home_news_side {
+            //background-color: aquamarine;
+            width: 50%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+    
+            .news_title {
+                width: 100%;
+                height: 200px;
+                display: flex;
+                align-items: center;
+                font-family: 'Josefin Sans', sans-serif;
+                background: linear-gradient(40deg, $standard-color-gray, $standard-color-white);
+    
+                .title-news {
+                    font-family: $standard-font-Poiret-One;
+                    font-size: 130px;
+                    color: $standard-color-blue-secundary;
+                    font-size: 200;
+                    margin-left: 55px;
+                    
+                }
+            }
+    
+            .news_back {
+                display: flex;
+                justify-content: flex-end;
+                margin-right: 15px;
+                font-family: 'Josefin Sans', sans-serif;
+                font-size: 30px;
+                cursor: pointer;
+    
+                .news_navLink_readMore {
+                    text-decoration: none;
+                }
+    
+                h3 {
+                    font-weight: 500;
+                    font-size: 30px;
+                    color: $standard-color-blue;
+                    transition: color 1s;
+                    &:hover {
+                        color: $standard-color-red;
+                        
+                    }
+                }
+            }
+        }
+    
+        .home_news_image_side {
+            width: 50%;
+            display: flex;
+            justify-content: flex-end;
+    
+            img {
+                width: 80%;
+            }
+        }
     }
 }
 
-.home_container_carrouselSide {
-    display: flex;
-    background-image: url("https://cdn.discordapp.com/attachments/1062718230432596059/1065996148034256936/img_fondo_oscura.png");
-    background-size: cover;
-    justify-content: space-between;
-    align-items: center;
-    overflow: hidden;
-    transform: 
-    rotateY(calc(var(--offset) * 50deg)) 
-    scaleY(calc(1 + var(--abs-offset) * -0.4))
-    translateZ(calc(var(--abs-offset) * -30rem))
-    translateX(calc(var(--direction) * -5rem));
-  filter: blur(calc(var(--abs-offset) * 1rem));
-  transition: all 0.3s ease-out;
-  background-repeat: no-repeat;
-  position: relative;
-  .home_carrousel_logo{
-    position: absolute;
-    bottom: 40px;
-    right: 20px;
+//TODO ------------------------------------------------------------------------------------
 
-    width: 100px;
-    img{
-        width: 100%;}
-  }
-}
 
-.home_carrouselIMG {
-    height: 500px;
-    margin-top: 45px;
-    margin-bottom: 45px;
-}
 
-.home_carrousel_ContainerDiv {
-    display: flex;
-    flex-direction: center;
-    width: 55%;
-}
 
-.home_container_imagediv {
-    width: 45%;
-}
+
+
+
+
+
+
 
 
 .home_all_imageSide {
     display: flex;
 }
 
-.home_image_left {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 50%;
-    align-items: flex-end;
-    z-index: 2;
-}
 
-.home_image_rigth {
-    display: flex;
-    justify-content: flex-start;
-    width: 50%;
-    align-items: center;
-}
 
-.home_image1 {
-    position: relative;
-    right: 100px;
-}
 
-.home_news_container{
-    display:flex;
-    margin-top: 20px;
-
-    .home_news_side{
-        width: 50%;
-        display: flex;
-        flex-direction: column;
-
-        .news_title{
-            display: flex;
-            font-family: 'Josefin Sans', sans-serif;
-            background: linear-gradient(90deg, rgb(177, 174, 174), white);
-
-            h1 {
-                font-size: 50px;
-                margin-left: 25px;
-            }
-        }
-        .news_back{
-            display: flex;
-            justify-content: flex-end;
-            margin-right: 15px;
-            font-family: 'Josefin Sans', sans-serif;
-            font-size: 30px;
-            cursor: pointer;
-
-            .news_navLink_readMore {
-                text-decoration: none;
-            }
-            
-            h3 {
-                font-weight: 500;
-                &:hover {
-                    color: $standard-color-blue;
-                    font-weight: 1000;
-                }
-            }
-        }
-    }
-
-    .home_news_image_side{
-        width: 50%;
-        display: flex;
-        justify-content: flex-end;
-        img{
-            width: 80%;
-        }
-    }
-}
 
 
 
