--- a/client/src/styles/components/news/_news.scss
+++ b/client/src/styles/components/news/_news.scss
@@ -18,17 +18,51 @@
         margin-top: 20px;
         box-shadow: 1px 1px 1px 1px rgba(161, 159, 159, 0.3);
         margin-bottom: 10px;
+        @media(max-width:710px){
+          flex-wrap: wrap;
+          background-color: white;
+          width:100%;
+          height:auto;
+
+        
+          
+
+        }
 
         .news_firstLine_cardRow {
             display: flex;
             width: 70%;
             height: 100%;
+          
+            
+            @media (max-width:710px){
+              width: 800px;
+              
+              width:100%;
+              height: 300px;
+              
+          }
+
+          @media(max-width:450px){
+            flex-direction: column;
+            height: auto;
+            align-items: center;
+            
+          }
             .news_firstLine_firstCard {
                 width: 65%;
                 margin: 5px;
                 position: relative;
                 background-color: rgb(34, 110, 110);
                 cursor: pointer;
+              
+               @media(max-width:710px){
+                width: 50%;}
+                @media(max-width:450px){
+                  width: 100%;
+                  height: 200px;
+                  align-items: center;
+                }
                 img {
                     width: 100%;
                     height: 100%;
@@ -71,7 +105,14 @@
                 margin: 5px;
                 background-color: rgb(34, 110, 110);
                 position: relative;
+                align-items: center;
                 cursor: pointer;
+                @media(max-width:710px){
+                  width: 50%;} 
+                  @media(max-width:450px){
+                    width: 100%;
+                    height: 200px;
+                  } 
                 img {
                     width: 100%;
                     height: 100%;
@@ -115,13 +156,34 @@
             flex-direction: column;
             width: 30%;
             height: 100%;
-
+            
+          @media(max-width:710px){
+            flex-direction: row;
+            
+            height: 300px;
+          width:100%}
+          @media(max-width:450px){
+           flex-direction: column;
+            width: 100%;
+            height: auto;
+            align-items: center;
+          }
             .news_firstLine_thridCard {
                 height: 50%;
                 margin: 5px;
                 position: relative;
                 background-color: rgb(34, 110, 110);
+                align-items: center;
                 cursor: pointer;
+                @media(max-width:710px){
+                  width: 50%;
+                  height:100%;
+                  align-items: center;}
+                  @media(max-width:450px){
+                    width: 100%;
+                    height: 200px;
+                    align-items: center;
+                  }
                 img {
                     width: 100%;
                     height: 100%;
@@ -165,6 +227,13 @@
                 position: relative;
                 background-color: rgb(34, 110, 110);
                 cursor: pointer;
+                @media(max-width:710px){
+                  width: 50%;
+                height:100%}
+                @media(max-width:450px){
+                  width: 100%;
+                  height: 200px;
+                }
                 img {
                     width: 100%;
                     height: 100%;
