--- a/client/src/styles/components/_home.scss
+++ b/client/src/styles/components/_home.scss
@@ -1,7 +1,7 @@
 body {
     margin: 0;
 }
-
+// backgroundImage: `url(${img_background_carrucel})`,
 .home_wrapper {
     display: flex;
     flex-direction: column;
@@ -18,21 +18,21 @@ body {
 
     .home_all_imageSide {
         //background-color: aqua;
-        height: $standard-basic-heith-home;
+        // height: $standard-basic-heith-home;
 
         .home_image_left {
             //  background-color: antiquewhite;
             display: flex;
             flex-direction: column;
-            justify-content: center;
             width: 50%;
             align-items: flex-end;
             z-index: 2;
-
+            height: auto!important;
+            justify-content: center;
             //height: 807.502px;
             //width: 807.502px;
             .home_text_1 {
-                font-size: 280px;
+                font-size: 12rem;
                 font-family: $standard-font-Poiret-One;
                 margin: 0;
                 position: relative;
@@ -40,9 +40,9 @@ body {
             }
 
             .home_text_2 {
-                font-size: 130px;
+                font-size: 11rem;
                 font-family: $standard-font-Satisfy;
-                margin: 0;
+                margin-top: 10px;
                 position: relative;
                 bottom: 50px;
                 left: 100px;
@@ -50,16 +50,16 @@ body {
             }
 
             .home_button_li {
-                width: 457px;
-                height: 93px;
+                width: 20rem;
+                height: 5rem;
                 display: flex;
                 background-color: $standard-color-blue;
                 color: $white;
                 border: 1px solid $standard-color-blue;
-                border-radius: 50px;
-                font-size: 53px;
+                border-radius: 30px;
+                font-size: 2.5rem;
                 font-family: $standard-font-Poiret-One;
-                padding: 5px 70px;
+                padding: 8px 50px;
                 align-items: center;
                 justify-content: center;
                 position: relative;
@@ -81,21 +81,21 @@ body {
             justify-content: flex-start;
             width: 50%;
             align-items: center;
-
             .home_image1 {
                 position: relative;
-                right: 100px;
-
-                height: 807.502px;
-                width: 807.502px;
+                right: 80px;
+                height: 600px;
+                
+                // height: 807.502px;
+                // width: 807.502px;
             }
         }
 
     }
 
     .home_container_carrouselSide {
-        background-color: blueviolet;
-        height: 1080px;
+        background-image: url("https://i.ibb.co/0Q0G65y/bacground-Carrucel.png");
+        height: 450px;
         display: flex;
         
         background-size: cover;
@@ -123,7 +123,7 @@ body {
         .home_container_imagediv {
             display: flex;
             align-items: center;
-            height: 70%;
+            height: 90%;
             width: 30%;
             //background-color: antiquewhite;
             .home_carrouselIMG {
@@ -136,24 +136,29 @@ body {
             display: flex;
             //background-color: aliceblue;
             flex-direction: center;
-            width: 55%;
+            width: 59%;
+            
         }
     }
     .home_news_container {
         display: flex;
-        margin-top: 0px;
+     
+        justify-content: center;
         //background-color: aqua;
     
         .home_news_side {
-            //background-color: aquamarine;
+            background-color: aquamarine;
             width: 50%;
             display: flex;
             flex-direction: column;
+            align-items: center;
             justify-content: center;
+            height: auto;
+           
     
             .news_title {
                 width: 100%;
-                height: 200px;
+                height: 5rem;
                 display: flex;
                 align-items: center;
                 font-family: 'Josefin Sans', sans-serif;
@@ -161,20 +166,21 @@ body {
     
                 .title-news {
                     font-family: $standard-font-Poiret-One;
-                    font-size: 130px;
+                    font-size: 5rem;
                     color: $standard-color-blue-secundary;
-                    font-size: 200;
+                    
                     margin-left: 55px;
                     
                 }
             }
     
             .news_back {
+                background-color: blue;
                 display: flex;
                 justify-content: flex-end;
                 margin-right: 15px;
                 font-family: 'Josefin Sans', sans-serif;
-                font-size: 30px;
+                font-size: 2rem;
                 cursor: pointer;
     
                 .news_navLink_readMore {
@@ -195,12 +201,15 @@ body {
         }
     
         .home_news_image_side {
+            background-color: red;
             width: 50%;
+            
             display: flex;
             justify-content: flex-end;
     
             img {
-                width: 80%;
+                width: 100%;
+                height: 80%;
             }
         }
     }
